vaultwarden/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vaultwarden
  template:
    metadata:
      labels:
        app: vaultwarden
    spec:
      containers:
      - name: vaultwarden
        image: vaultwarden/server:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: tls-certs
          mountPath: /etc/ssl/certs
          readOnly: true
        - name: vaultwarden-data
          mountPath: /data/
      volumes:
      - name: tls-certs
        secret:
          secretName: vaultwarden-tls
      - name: vaultwarden-data
        persistentVolumeClaim:
          claimName: vaultwarden-pvc
